# demandsphere-mcp

./: .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  config.example.json  docker-compose.yml  pyproject.toml  sanity-check.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  secret-scan.yml
examples/: mcp-config-pip.json  mcp-config-uv.json
src/demandsphere_mcp/: __init__.py  client.py  config.py  server.py
src/demandsphere_mcp/tools/: __init__.py  brands_v51.py  chatgpt_compat.py  genai_v51.py  keywords_v50.py  prompts.py  resources.py  sites.py  utils.py
tests/: _helpers.py  conftest.py  test_brands.py  test_client_context.py  test_client_injection.py  test_consolidated.py  test_core.py  test_hints.py  test_prompts.py  test_resources.py
tests/tools/: test_safe_tool_error_envelope.py  test_sites_hint.py
