[project]
name = "demandsphere-mcp"
dynamic = ["version"]
description = "MCP server for DemandSphere search intelligence platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "DemandSphere", email = "support@demandsphere.com" }
]
keywords = ["mcp", "seo", "search", "demandsphere", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp[cli]>=1.2.0,<2",
    "httpx>=0.27.0,<1",
    "pydantic>=2.0.0,<3",
    "pydantic-settings>=2.0.0,<3",
]

[project.urls]
Homepage = "https://github.com/DemandSphereDev/demandsphere-mcp"
Repository = "https://github.com/DemandSphereDev/demandsphere-mcp"
Issues = "https://github.com/DemandSphereDev/demandsphere-mcp/issues"
Documentation = "https://help.demandsphere.com"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5.0",
]

[project.scripts]
demandsphere-mcp = "demandsphere_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/demandsphere_mcp/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/demandsphere_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 100
